--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ nav {
 
 aside { 
     grid-area: aside; 
-    display: static;
+    display: flex;
     flex-direction: column;
     background-color: #f9f9f9;
     padding: 15px;
