--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,7 @@ nav button, aside button {
 
 
 .photo-slot {
+    display: flex;
     flex: 0 1 calc(33.33% - 10px);
     margin: 5px;
     border: 1px solid #999;
